[project]
name = "stream-pack"
description = "A suite of custom ComfyUI nodes for building real-time video and audio workflows using ComfyStream."
version = "1.0.0"
license = {file = "LICENSE"}
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/livepeer/ComfyUI-Stream-Pack"

[tool.comfy]
PublisherId = "livepeer-comfystream"
DisplayName = "ComfyUI-Stream-Pack"
Icon = "https://raw.githubusercontent.com/livepeer/comfystream-docs/main/logo/icon-light-120px.svg"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
